# deployment-aware-climate-foundation-models-research

./: .gitignore  README.md  analysis.py  pyproject.toml  requirements.txt  run_experiment.py
.github/workflows/: deploy-website.yml
config/: .env.example  experiment.local.yaml  experiment.validation.yaml  experiment.yaml  forecasting_aurora_greater_horn.yaml
data/: .gitignore  README.md
docs/: data_layout.md  model_selection.md
eval_harness/: __init__.py  config.py  exploration.py  readiness.py
notebooks/: 00_data_loading_smoke_test.ipynb  01_model_loading_smoke_test.ipynb  02_pipeline_validation_smoke_test.ipynb  03_sen1floods11_ghana_eda.ipynb  05_dataset_readiness_decision_matrix.ipynb  06_local_pilot_results.ipynb  07_prithvi_mac_end_to_end_smoke.ipynb  08_gcp_full_experiment_pipeline.ipynb  09_aurora_greater_horn_forecasting.ipynb
scripts/: analyze_aurora_results.py  analyze_lightning_results.py  check_aurora_results_schema.py  check_aurora_validation_gate.py  check_experiment_readiness.py  check_forecasting_readiness.py  check_model_checkpoints.py  check_real_datasets.py  download_era5_static_fields.py  make_label_splits.py  make_lightning_talk_report.py  make_website_figures.py  merge_aurora_adaptation_results.py  modal_aurora_experiment.py  profile_dataset.py  run_aurora_forecasting_experiment.py  run_forecasting_persistence_baseline.py  run_foundation_experiment.py  run_lightning_remaining_experiments.sh  run_local_pilot.py  run_prithvi_mac_pilot.py  summarize_results.py
website/: README.md  astro.config.mjs  package-lock.json  package.json
(+39 files in other folders)
