[project]
name = "climate-foundation-models"
version = "0.1.0"
description = "Deployment-aware evaluation harness for Earth foundation model adaptation in African climate resilience tasks."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "einops>=0.8.0",
    "huggingface-hub>=0.26.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.8.0",
    "modal>=1.5.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.14.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.4.0",
    "timm>=1.0.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.0",
    "transformers>=4.46.0",
]

[project.optional-dependencies]
geo = [
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
]
dev = [
    "nbformat>=5.10.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
gcp = [
    "terratorch",
]
weather = [
    "cdsapi>=0.7.5",
    "dask>=2024.8.0",
    "gcsfs>=2024.6.0",
    "netcdf4>=1.7.0",
    "microsoft-aurora>=2.0.0",
    "xarray>=2024.7.0",
    "zarr>=2.18.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
